tests/baselines/reference/invalid-identity-escape-in-capture-u.errors.txt
invalid-identity-escape-in-capture-u.ts(14,4): error TS1501: Named capturing groups are only available when targeting 'ES2018' or later.
invalid-identity-escape-in-capture-u.ts(14,7): error TS1496: '\a' is not a valid character escape.
invalid-identity-escape-in-capture-u.ts(14,11): error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.


==== invalid-identity-escape-in-capture-u.ts (3 errors) ====
    // Copyright 2017 the V8 project authors. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    description: GroupName is `< RegExpIdentifierName >`.
    esid: prod-GroupName
    negative:
      phase: parse
      type: SyntaxError
    features: [regexp-named-groups]
    ---*/
    
    
    /(?<a>\a)/u;
       ~~~
!!! error TS1501: Named capturing groups are only available when targeting 'ES2018' or later.
          ~~
!!! error TS1496: '\a' is not a valid character escape.
              ~
!!! error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.
    